[tool.poetry]
name = "example-python-project"
version = "0.1.0"
description = ""
authors = ["Vittorio Camisa"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
Flask = "^1.0"
gunicorn = "^19.9"
redis = "^3.2"

[tool.poetry.dev-dependencies]
pytest = "^4.4"
flake8 = "^3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
